// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Xing 1 1`] = `
<Component
  big={true}
  link="http://sharingbuttons.io"
  message="I am so cool"
  solidcircle={true}
>
  <styled.a
    aria-label=""
    href="https://www.xing.com/app/user?op=share;url=http%3A%2F%2Fsharingbuttons.io;title=I%20am%20so%20cool."
    target="_blank"
  >
    <a
      aria-label=""
      className="sc-bwzfXH eNnkUm"
      href="https://www.xing.com/app/user?op=share;url=http%3A%2F%2Fsharingbuttons.io;title=I%20am%20so%20cool."
      target="_blank"
    >
      <styled.div>
        <div
          className="sc-gZMcBi iAWbXk"
        >
          <styled.div
            aria-hidden="true"
            solidcircle={true}
          >
            <div
              aria-hidden="true"
              className="sc-htpNat gylFwk"
            >
              <XingIconCircleSolid>
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 0C5.4 0 0 5.4 0 12s5.4 12 12 12 12-5.4 12-12S18.6 0 12 0zM7.8 14.5h-3L7 11.3 5.3 8.5h3l1.8 2.8L8 14.5zm9 5h-3.4l-3-5.5L15 5.5h3.2L13.6 14l3 5.5z"
                  />
                </svg>
              </XingIconCircleSolid>
               Share on Xing
               
            </div>
          </styled.div>
        </div>
      </styled.div>
    </a>
  </styled.a>
</Component>
`;

exports[`Xing 2 1`] = `
<Component
  link="http://sharingbuttons.io"
  medium={true}
  message="I am so cool"
  solidcircle={true}
>
  <styled.a
    aria-label=""
    href="https://www.xing.com/app/user?op=share;url=http%3A%2F%2Fsharingbuttons.io;title=I%20am%20so%20cool."
    target="_blank"
  >
    <a
      aria-label=""
      className="sc-bwzfXH eNnkUm"
      href="https://www.xing.com/app/user?op=share;url=http%3A%2F%2Fsharingbuttons.io;title=I%20am%20so%20cool."
      target="_blank"
    >
      <styled.div>
        <div
          className="sc-gZMcBi iAWbXk"
        >
          <styled.div
            aria-hidden="true"
            solidcircle={true}
          >
            <div
              aria-hidden="true"
              className="sc-htpNat gylFwk"
            >
              <XingIconCircleSolid>
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 0C5.4 0 0 5.4 0 12s5.4 12 12 12 12-5.4 12-12S18.6 0 12 0zM7.8 14.5h-3L7 11.3 5.3 8.5h3l1.8 2.8L8 14.5zm9 5h-3.4l-3-5.5L15 5.5h3.2L13.6 14l3 5.5z"
                  />
                </svg>
              </XingIconCircleSolid>
               Xing
               
            </div>
          </styled.div>
        </div>
      </styled.div>
    </a>
  </styled.a>
</Component>
`;

exports[`Xing 3 1`] = `
<Component
  link="http://sharingbuttons.io"
  message="I am so cool"
  small={true}
  solidcircle={true}
>
  <styled.a
    aria-label=""
    href="https://www.xing.com/app/user?op=share;url=http%3A%2F%2Fsharingbuttons.io;title=I%20am%20so%20cool."
    target="_blank"
  >
    <a
      aria-label=""
      className="sc-bwzfXH eNnkUm"
      href="https://www.xing.com/app/user?op=share;url=http%3A%2F%2Fsharingbuttons.io;title=I%20am%20so%20cool."
      target="_blank"
    >
      <styled.div
        small={true}
      >
        <div
          className="sc-gZMcBi bdcFDF"
        >
          <styled.div
            aria-hidden="true"
            solidcircle={true}
          >
            <div
              aria-hidden="true"
              className="sc-htpNat gylFwk"
            >
              <XingIconCircleSolid>
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 0C5.4 0 0 5.4 0 12s5.4 12 12 12 12-5.4 12-12S18.6 0 12 0zM7.8 14.5h-3L7 11.3 5.3 8.5h3l1.8 2.8L8 14.5zm9 5h-3.4l-3-5.5L15 5.5h3.2L13.6 14l3 5.5z"
                  />
                </svg>
              </XingIconCircleSolid>
            </div>
          </styled.div>
        </div>
      </styled.div>
    </a>
  </styled.a>
</Component>
`;

exports[`Xing 4 1`] = `
<Component
  big={true}
  circle={true}
  link="http://sharingbuttons.io"
  message="I am so cool"
>
  <styled.a
    aria-label=""
    href="https://www.xing.com/app/user?op=share;url=http%3A%2F%2Fsharingbuttons.io;title=I%20am%20so%20cool."
    target="_blank"
  >
    <a
      aria-label=""
      className="sc-bwzfXH eNnkUm"
      href="https://www.xing.com/app/user?op=share;url=http%3A%2F%2Fsharingbuttons.io;title=I%20am%20so%20cool."
      target="_blank"
    >
      <styled.div>
        <div
          className="sc-gZMcBi iAWbXk"
        >
          <styled.div
            aria-hidden="true"
          >
            <div
              aria-hidden="true"
              className="sc-htpNat dZQCuR"
            >
              <XingIconCircle>
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="11.5"
                  />
                  <path
                    d="M8.4 8.5h-3L7 11.3l-2.2 3.2h3l2.3-3.2zm10-3h-3.2l-5 8.5 3.2 5.5h3.3l-3-5.5z"
                  />
                </svg>
              </XingIconCircle>
               Share on Xing
               
            </div>
          </styled.div>
        </div>
      </styled.div>
    </a>
  </styled.a>
</Component>
`;

exports[`Xing 5 1`] = `
<Component
  circle={true}
  link="http://sharingbuttons.io"
  medium={true}
  message="I am so cool"
>
  <styled.a
    aria-label=""
    href="https://www.xing.com/app/user?op=share;url=http%3A%2F%2Fsharingbuttons.io;title=I%20am%20so%20cool."
    target="_blank"
  >
    <a
      aria-label=""
      className="sc-bwzfXH eNnkUm"
      href="https://www.xing.com/app/user?op=share;url=http%3A%2F%2Fsharingbuttons.io;title=I%20am%20so%20cool."
      target="_blank"
    >
      <styled.div>
        <div
          className="sc-gZMcBi iAWbXk"
        >
          <styled.div
            aria-hidden="true"
          >
            <div
              aria-hidden="true"
              className="sc-htpNat dZQCuR"
            >
              <XingIconCircle>
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="11.5"
                  />
                  <path
                    d="M8.4 8.5h-3L7 11.3l-2.2 3.2h3l2.3-3.2zm10-3h-3.2l-5 8.5 3.2 5.5h3.3l-3-5.5z"
                  />
                </svg>
              </XingIconCircle>
               Xing
               
            </div>
          </styled.div>
        </div>
      </styled.div>
    </a>
  </styled.a>
</Component>
`;

exports[`Xing 6 1`] = `
<Component
  circle={true}
  link="http://sharingbuttons.io"
  message="I am so cool"
  small={true}
>
  <styled.a
    aria-label=""
    href="https://www.xing.com/app/user?op=share;url=http%3A%2F%2Fsharingbuttons.io;title=I%20am%20so%20cool."
    target="_blank"
  >
    <a
      aria-label=""
      className="sc-bwzfXH eNnkUm"
      href="https://www.xing.com/app/user?op=share;url=http%3A%2F%2Fsharingbuttons.io;title=I%20am%20so%20cool."
      target="_blank"
    >
      <styled.div
        small={true}
      >
        <div
          className="sc-gZMcBi bdcFDF"
        >
          <styled.div
            aria-hidden="true"
          >
            <div
              aria-hidden="true"
              className="sc-htpNat dZQCuR"
            >
              <XingIconCircle>
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="11.5"
                  />
                  <path
                    d="M8.4 8.5h-3L7 11.3l-2.2 3.2h3l2.3-3.2zm10-3h-3.2l-5 8.5 3.2 5.5h3.3l-3-5.5z"
                  />
                </svg>
              </XingIconCircle>
            </div>
          </styled.div>
        </div>
      </styled.div>
    </a>
  </styled.a>
</Component>
`;

exports[`Xing 7 1`] = `
<Component
  big={true}
  link="http://sharingbuttons.io"
  message="I am so cool"
  solid={true}
>
  <styled.a
    aria-label=""
    href="https://www.xing.com/app/user?op=share;url=http%3A%2F%2Fsharingbuttons.io;title=I%20am%20so%20cool."
    target="_blank"
  >
    <a
      aria-label=""
      className="sc-bwzfXH eNnkUm"
      href="https://www.xing.com/app/user?op=share;url=http%3A%2F%2Fsharingbuttons.io;title=I%20am%20so%20cool."
      target="_blank"
    >
      <styled.div>
        <div
          className="sc-gZMcBi iAWbXk"
        >
          <styled.div
            aria-hidden="true"
            solid={true}
          >
            <div
              aria-hidden="true"
              className="sc-htpNat gylFwk"
            >
              <XingIconFill>
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M10.2 9.7l-3-5.4C7.2 4 7 4 6.8 4h-5c-.3 0-.4 0-.5.2v.5L4 10 .4 16v.5c0 .2.2.3.4.3h5c.3 0 .4 0 .5-.2l4-6.6v-.5zM24 .2l-.5-.2H18s-.2 0-.3.3l-8 14v.4l5.2 9c0 .2 0 .3.3.3h5.4s.3 0 .4-.2c.2-.2.2-.4 0-.5l-5-8.8L24 .7V.2z"
                  />
                </svg>
              </XingIconFill>
               Share on Xing
               
            </div>
          </styled.div>
        </div>
      </styled.div>
    </a>
  </styled.a>
</Component>
`;

exports[`Xing 8 1`] = `
<Component
  link="http://sharingbuttons.io"
  medium={true}
  message="I am so cool"
  solid={true}
>
  <styled.a
    aria-label=""
    href="https://www.xing.com/app/user?op=share;url=http%3A%2F%2Fsharingbuttons.io;title=I%20am%20so%20cool."
    target="_blank"
  >
    <a
      aria-label=""
      className="sc-bwzfXH eNnkUm"
      href="https://www.xing.com/app/user?op=share;url=http%3A%2F%2Fsharingbuttons.io;title=I%20am%20so%20cool."
      target="_blank"
    >
      <styled.div>
        <div
          className="sc-gZMcBi iAWbXk"
        >
          <styled.div
            aria-hidden="true"
            solid={true}
          >
            <div
              aria-hidden="true"
              className="sc-htpNat gylFwk"
            >
              <XingIconFill>
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M10.2 9.7l-3-5.4C7.2 4 7 4 6.8 4h-5c-.3 0-.4 0-.5.2v.5L4 10 .4 16v.5c0 .2.2.3.4.3h5c.3 0 .4 0 .5-.2l4-6.6v-.5zM24 .2l-.5-.2H18s-.2 0-.3.3l-8 14v.4l5.2 9c0 .2 0 .3.3.3h5.4s.3 0 .4-.2c.2-.2.2-.4 0-.5l-5-8.8L24 .7V.2z"
                  />
                </svg>
              </XingIconFill>
               Xing
               
            </div>
          </styled.div>
        </div>
      </styled.div>
    </a>
  </styled.a>
</Component>
`;

exports[`Xing 9 1`] = `
<Component
  link="http://sharingbuttons.io"
  message="I am so cool"
  small={true}
  solid={true}
>
  <styled.a
    aria-label=""
    href="https://www.xing.com/app/user?op=share;url=http%3A%2F%2Fsharingbuttons.io;title=I%20am%20so%20cool."
    target="_blank"
  >
    <a
      aria-label=""
      className="sc-bwzfXH eNnkUm"
      href="https://www.xing.com/app/user?op=share;url=http%3A%2F%2Fsharingbuttons.io;title=I%20am%20so%20cool."
      target="_blank"
    >
      <styled.div
        small={true}
      >
        <div
          className="sc-gZMcBi bdcFDF"
        >
          <styled.div
            aria-hidden="true"
            solid={true}
          >
            <div
              aria-hidden="true"
              className="sc-htpNat gylFwk"
            >
              <XingIconFill>
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M10.2 9.7l-3-5.4C7.2 4 7 4 6.8 4h-5c-.3 0-.4 0-.5.2v.5L4 10 .4 16v.5c0 .2.2.3.4.3h5c.3 0 .4 0 .5-.2l4-6.6v-.5zM24 .2l-.5-.2H18s-.2 0-.3.3l-8 14v.4l5.2 9c0 .2 0 .3.3.3h5.4s.3 0 .4-.2c.2-.2.2-.4 0-.5l-5-8.8L24 .7V.2z"
                  />
                </svg>
              </XingIconFill>
            </div>
          </styled.div>
        </div>
      </styled.div>
    </a>
  </styled.a>
</Component>
`;
